--- a/Assignment/starter_code/css/style.css
+++ b/Assignment/starter_code/css/style.css
@@ -294,7 +294,7 @@ footer p {
 }
 
 
-/*MOBILE SCREEN*/
+/*iPad SCREEN 768px*/
 
 @media screen and (max-width: 768px){
 
@@ -340,6 +340,7 @@ footer p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
   }
 
@@ -360,11 +361,20 @@ footer p {
   }
 
 
+
+  /*480px*/
+@media screen and (max-width: 480px){
+
+  .container {
+
+  }
+
   #benefits .container p{
     width: 100%;
     font-size: 18px;
-    text-align: center;
+    text-align: left;
     float: none;
+    margin-left: 85px;
   }
 
   #benefits .container ul{
@@ -372,6 +382,22 @@ footer p {
     font-size: 18px;
     text-align: left;
     float: none;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: 85px;
   }
+
+blockquote {
+  font-size: 20px;
+}
+
+  /*BLOG PAGE*/
+
+ #main .container h2 {
+   width: 100%;
+   font-size: 25px;
+   text-align: center;
+   float: none;
+ }
 
   }
