--- a/Assignment/starter_code/css/style.css
+++ b/Assignment/starter_code/css/style.css
@@ -360,37 +360,6 @@ footer p {
     font-size: 18px;
   }
 
-
-
-  /*480px*/
-@media screen and (max-width: 480px){
-
-  .container {
-
-  }
-
-  #benefits .container p{
-    width: 100%;
-    font-size: 18px;
-    text-align: left;
-    float: none;
-    margin-left: 85px;
-  }
-
-  #benefits .container ul{
-    width: 100%;
-    font-size: 18px;
-    text-align: left;
-    float: none;
-    margin: 0;
-    margin-top: 10px;
-    margin-left: 85px;
-  }
-
-blockquote {
-  font-size: 20px;
-}
-
   /*BLOG PAGE*/
 
  #main .container h2 {
@@ -400,4 +369,65 @@ blockquote {
    float: none;
  }
 
+ #sidebar {
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+   height: 300px;
+ }
+
+ #sidebar img {
+   height: 280px;
+   width: 175px;
+
+ }
+
+ .sub-categories {
+   display: flex;
+   flex-direction: column;
+   margin: 20px;
+ }
+
+  }
+
+
+
+
+
+    /*480px*/
+  @media screen and (max-width: 480px){
+
+    .container {
+
+    }
+
+    #benefits .container p{
+      width: 100%;
+      font-size: 18px;
+      text-align: left;
+      float: none;
+      margin-left: 85px;
+    }
+
+    #benefits .container ul{
+      width: 100%;
+      font-size: 18px;
+      text-align: left;
+      float: none;
+      margin: 0;
+      margin-top: 10px;
+      margin-left: 85px;
+    }
+
+    blockquote {
+    font-size: 20px;
+  }
+  #main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  #main h2 {
+    font-size: 20px;
   }
